base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: greeting
    app.kubernetes.io/component: greeting
    app.kubernetes.io/instance: greeting
  name: greeting
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: greeting
  type: ClusterIP
