base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeting
spec:
  hosts:
  - "*"
  gateways:
  - greeting-gateway
  http:
  - match:
    - uri:
        exact: /greeting
    route:
    - destination:
        host: greeting
        port:
          number: 8080
